# NeRFPlugin

./: .gitattributes  .gitignore  Makefile  README.md  data_transform.py  pyproject.toml
000_Research/: Research.md
001_DatasetPrep/: DataEvaluation.md  DatasetPrep.md  Instant-NGPPrep.md  MipNeRFPrep.md  PlenOctreePrep.md
NeRFPlugin_test/: README.md  clean_plugin_artifacts.ps1  package.json  setup.py
NeRFPlugin_test/Editor/: NeRFTerminalEditorWindow.cs  NerfPluginInstaller.cs
NeRFPlugin_test/Runtime/: MeshAutoLoader.cs  NeRFPlugin.asmdef  ObjImporter.cs  TrainingOrchestrator.cs  VolumeLoader.cs
NeRFPlugin_test/Scripts/: ngp_runner.py
NeRFPlugin_test/Scripts/nerf_cli/: app.py
NeRFPlugin_test/Scripts/pipeline/: __init__.py
NeRFPlugin_test/Shader/: VolumeRaymarch.shader
NeRFPlugin_test/nerf_cli/: app.py
NeRFPlugin_test/pipeline/: models.py  pipeline.py  transformer.py  utils.py
NeRFPlugin_test/pipeline/requirements/: requirements_common.txt  requirements_windows.txt
NeRFPlugin_test/pipeline/transformers/: colmap_transformer.py  exporter.py  nerf_transformer.py
nerf_cli/: app.py
pipeline/: __init__.py  instiall_ubuntu_deps.sh  models.py  utils.py
pipeline/requirements/: requirements_common.txt
pipeline/transformers/: colmap2nerf.py  colmap_transformer.py  exporter.py  image_reader.py  nerf_transformer.py
unity_importer/Assets/: ObjImporter.cs  test1.unity
unity_importer/Assets/Docs/: README_AutoImporter.md
unity_importer/Assets/Editor/: AutoObjToPrefab.cs
venv_ngp1/: pyvenv.cfg
venv_ngp1/Scripts/: activate  activate.bat
(+12 files in other folders)
